# platesv2

./: REPORT.md  pyproject.toml
notebooks/: plates_baseline.ipynb
outputs/: submission.csv  summary.json
src/: pipeline.py
