[project]
name = "platesv2"
version = "0.1.0"
description = "PlatesV2 — Cleaned vs Dirty plate classification"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "numpy",
    "pandas",
    "pillow",
    "matplotlib",
    "scikit-learn",
    "tqdm",
    "jupyter",
    "ipykernel",
    "kaggle",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
